--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Roboto+Mono:wght@600&display=swap"
             rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
         <link rel="icon"
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏱️</text></svg>">
@@ -23,7 +24,10 @@
 
     <body>
         <div id="content">
-            <div class="d-flex align-items-center justify-content-center mt-5">
+            <div>
+                <h1 class="text-center mt-5 heading">Improved Stopwatch</h1>
+            </div>
+            <div class="d-flex align-items-center justify-content-center mt-3 mb-3">
                 <div class="stopwatch">
                     00:00:00:00
                 </div>
@@ -34,38 +38,47 @@
                     <div class="d-flex align-items-center justify-content-between mb-2">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
-                                value="60" onchange="changeFontSize()">
+                                value="50" onchange="changeFontSize()">
                             <label class="form-check-label" for="flexRadioDefault1">
                                 Normal
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
-                                value="80" onchange="changeFontSize()">
+                                value="60" onchange="changeFontSize()">
                             <label class="form-check-label" for="flexRadioDefault2">
                                 Large
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3"
-                                value="100" onchange="changeFontSize()">
+                                value="70" onchange="changeFontSize()" checked>
                             <label class="form-check-label" for="flexRadioDefault3">
                                 Huge
                             </label>
                         </div>
                     </div>
                     <div class="form-floating mb-4">
-                        <textarea class="form-control" placeholder="Leave a comment here"
-                            id="recorded-times"></textarea>
+                        <textarea placeholder="Record your times here..." id="recorded-times"></textarea>
                     </div>
                     <div class="row m-1 d-flex justify-content-between">
                         <button id="start" class="btn">Start</button>
                         <button id="record" class="btn">Record</button>
                         <button id="reset" class="btn">Reset</button>
                     </div>
+                    <div class="row mt-5 d-flex justify-content-center">
+                        <button onclick="exportToTextFile()" class="btn mt-2"><svg xmlns="http://www.w3.org/2000/svg"
+                                width="22" height="22" fill="lightgrey" class="bi bi-download" viewBox="0 0 16 16">
+                                <path
+                                    d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                                <path
+                                    d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
-
+        </div>
         </div>
         <div class="footer">
             <footer><a target="_blank" href="https://github.com/lagerqvr">Made with ❤️ by<b>@lagerqvr</b></a></footer>
