--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Improved Stopwatch</title>
+        <meta charset="UTF-8">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
