Changed reset and clear functions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <textarea placeholder="Record your times here..." id="recorded-times"></textarea>
                     </div>
                     <div class="row m-1 d-flex justify-content-between">
-                        <button id="start" class="btn">Start</button>
+                        <button class="btn start btn-success">Start</button>
                         <button id="record" class="btn">Record</button>
                         <button id="reset" class="btn">Reset</button>
                         <button id="clear" class="btn">Clear</button>
