--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
+        <!-- Document title and meta tags -->
         <title>Improved Stopwatch</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Load Google Fonts for different font styles -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -13,37 +16,47 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+        <!-- Load the custom stylesheet -->
+        <link rel="stylesheet" href="./css/style.css">
+        <!-- Set the favicon -->
         <link rel="icon"
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏱️</text></svg>">
+        <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     </head>
 
     <body>
+        <!-- Main content container -->
         <div id="content">
+            <!-- Heading section -->
             <div>
-                <h1 class="text-center mt-5 heading">Improved Stopwatch <svg xmlns="http://www.w3.org/2000/svg"
-                        onclick="showInfo()" width="17" height="17" fill="currentColor"
-                        class="bi bi-patch-question app-info" viewBox="0 0 16 16">
+                <h1 class="text-center mt-5 heading">Improved Stopwatch
+                    <!-- Information icon for application info -->
+                    <svg xmlns="http://www.w3.org/2000/svg" onclick="showInfo()" width="17" height="17"
+                        fill="currentColor" class="bi bi-patch-question app-info" viewBox="0 0 16 16">
                         <path
                             d="M8.05 9.6c.336 0 .504-.24.554-.627.04-.534.198-.815.847-1.26.673-.475 1.049-1.09 1.049-1.986 0-1.325-.92-2.227-2.262-2.227-1.02 0-1.792.492-2.1 1.29A1.71 1.71 0 0 0 6 5.48c0 .393.203.64.545.64.272 0 .455-.147.564-.51.158-.592.525-.915 1.074-.915.61 0 1.03.446 1.03 1.084 0 .563-.208.885-.822 1.325-.619.433-.926.914-.926 1.64v.111c0 .428.208.745.585.745z" />
                         <path
                             d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z" />
                         <path d="M7.001 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0z" />
-                    </svg></h1>
+                    </svg>
+                </h1>
             </div>
+            <!-- Stopwatch display section -->
             <div class="d-flex align-items-center justify-content-center mt-3 mb-3">
                 <div class="stopwatch" contenteditable="true" oninput="formatInput()">
-                    00:00:00:00
+                    00:00:00:00 <!-- Default stopwatch display value -->
                 </div>
             </div>
-            <!-- Create div with parent div and center them -->
+            <!-- Font size selection and textarea section -->
             <div class="d-flex align-items-center justify-content-center center-box">
                 <div class="child">
+                    <!-- Font size selection radio buttons -->
                     <div class="d-flex align-items-center justify-content-between mb-2">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
@@ -67,15 +80,18 @@
                             </label>
                         </div>
                     </div>
+                    <!-- Textarea for recording times -->
                     <div class="mb-4">
                         <textarea placeholder="Record your times here..." id="recorded-times"></textarea>
                     </div>
+                    <!-- Buttons row -->
                     <div class="row m-1 d-flex justify-content-between">
                         <button id="start" class="btn btn-start">Start</button>
                         <button id="record" class="btn">Record</button>
                         <button id="reset" class="btn">Reset</button>
                         <button id="clear" class="btn">Clear</button>
                     </div>
+                    <!-- Export to .txt button -->
                     <div class="row mt-4 d-flex justify-content-center">
                         <label class="text-center export-txt">Export timestamps to <b>.txt</b></label>
                         <button onclick="exportToTextFile()" class="btn mt-2"><svg xmlns="http://www.w3.org/2000/svg"
@@ -91,13 +107,13 @@
                 </div>
             </div>
         </div>
-        </div>
+        <!-- Footer section -->
         <div class="footer">
             <footer><a target="_blank" href="https://github.com/lagerqvr">Made with ❤️ by <b>@lagerqvr</b></a></footer>
         </div>
-
     </body>
 
+    <!-- JavaScript file for the application -->
     <script src="./script.js"></script>
 
 </html>
