--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             crossorigin="anonymous"></script>
     </head>
 
-    <body>
+    <body class="blur-in">
         <!-- Main content container -->
         <div id="content">
             <!-- Heading section -->
